[metadata]
name = pysapets-example-pkg-cfginn
version = 0.0.3
author = Caleb Ginn
author_email = caleb.ginn@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cfginn/sap-simulation-package
project_urls =
    Bug Tracker = https://github.com/cfginn/sap-simulation-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pysapets
python_requires = >=3.6